--- a/Exercises/Development/listAStackPush.html
+++ b/Exercises/Development/listAStackPush.html
@@ -21,24 +21,31 @@ Written by Junyang Chen and Cliff Shaffer
 
   <style>
     .jsavcontainer {
-	  height: 125px;
+      height: 115px;
       border: 0px;
     }
-	.jsavcanvas{
-	  height: 125px;
-	}
-	.jsavnode {
+    .jsavcanvas{
+      height: 115px;
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -khtml-user-select: none;
+      -moz-user-select: moz-none;
+      -ms-user-select: none;
+      user-select: none;
+    }
+    .jsavnode {
       line-height: 30px !important;
       min-width: 30px !important;
       max-width: 30px !important;
       min-height: 30px !important;
       max-height: 30px !important;
+      cursor: pointer;
     }
     .jsavpointer{
       width: 40px;
       border: 1px solid #bbb;
       text-align: center;
-	  cursor: pointer;
+      cursor: pointer;
     }
     #reset { margin-right: 20px;}
     .highlight{
@@ -47,172 +54,201 @@ Written by Junyang Chen and Cliff Shaffer
   </style>
 </head>
 <body>
-
 <script>
-var jsav,           // The JSAV object
-  answerArr = [], // The (internal) array that stores the correct answer
-  cloneArr = [],  // A copy of the (internal) array at the start of the exercise for reset
-  jsavArr,        // The array that the user manipulates (JSAV object)
-  arrMax,
-  selected_pointer,
-  pointerIndex,   // The index of array by which the pointer points to.
-  pointerTop,     // 'top' pointer
-  status,
-  inValue,        // insertion value
-  userInput,      // Boolean: Tells us if user ever did anything
-  selected_index; // Position that has been selected by user for swap
+  var jsav,           // The JSAV object
+    answerArr = [],   // The (internal) array that stores the correct answer
+    cloneArr = [],    // A copy of the (internal) array at the start of the exercise for reset
+    maxSize,          // Size of the array.
+    jsavArr,          // The JSAV array that the user manipulates
+    arrMax,           // JSAV array recording 'top' pointer's index.
+    pointerTop,       // 'top' pointer
+    selected_pointer, // Pointer that has been highlighted
+    selected_index,   // Position that has been selected by user for swap
+    pointerIndex,     // The index of array by which the pointer points to.
+    inValue,          // insertion value
+    status,           // status = 0 : nothing has been currently selected
+                      // status = 1 : jsavArr element has been selected
+                      // status = 2 : 'top' pointer has been selected
+    userInput;        // Boolean: Tells us if user ever did anything
 
-JSAV._types.Pointer.prototype.click = function(fn){
-  var pointer = this;
-  this.element.click(function(){fn(pointer)});
-}
-// pointer click handler
-var pclick = function(pointer){
-  if(status == 1){
-    jsavArr.css(selected_index, {"font-size": "100%"});
-    jsavArr.unhighlight(selected_index);
-    selected_pointer = pointer;
-    selected_pointer.element.toggleClass('highlight');
-    status = 2;
-  }else if(status == 2){
-    selected_pointer.element.removeClass('highlight');
-	status = 0;
-  }else{
-    selected_pointer = pointer;
-    selected_pointer.element.toggleClass('highlight');
-    status = 2;
+  //
+  JSAV._types.Pointer.prototype.click = function(fn){
+    var pointer = this;
+    this.element.click(function(){fn(pointer)});
   }
-  userInput = true;
-}
-
-// Click event handler on the array 'jsavArr'
-var clickHandler = function (index, e) {
-  if (status == 0) { // if nothing currently selected
-    jsavArr.css(index, {"font-size": "110%"});
-	selected_index = index;
-	jsavArr.highlight(index);
-    status = 1;
-  } else if(status == 1) {	
-    jsavArr.swap(selected_index, index);	
-	jsavArr.css(index, {"font-size": "100%"});
-	jsavArr.unhighlight(index);
-	selected_index = -1;  // Reset to nothing selected
-    status = 0;
-  } else if (status == 2){
-    selected_pointer.target(jsavArr, {relativeIndex : index,targetIndex : index});
-    //jsav.step();
-    jsav.container.trigger("jsav-updaterelative");
-    selected_pointer.element.removeClass('highlight');
-    pointerIndex = index;
-    status = 0;
-  }
-  userInput = true;
-};
-
-// Click event handler on the array 'arrMax'
-var maxClickHandler = function (index, e) {
-  if (status == 2){
-    selected_pointer.target(arrMax, {relativeIndex : 0,targetIndex : 0});
-    jsav.container.trigger("jsav-updaterelative");
-    selected_pointer.element.removeClass('highlight');
-    pointerIndex = 0;
-    status = 0;
-  }
-  userInput = true;
-}
-
-// reset function definition
-var f_reset = function (max_size, arr_size) {
-  selected_index = -1;
-  status = 0; 
-
-  if($("#jsav")){
-    $("#jsav").empty();
-  }
-  jsav = new JSAV("jsav");	
-  jsavArr = jsav.ds.array(cloneArr, {indexed: true, center: false, top : 50});
-  arrMax = jsav.ds.array([max_size], {left:jsavArr.element.outerWidth() + 20, top : 50});
-  if(arr_size === max_size){
-    pointerTop = jsav.pointer("top", arrMax, {targetIndex:0});
-    pointerIndex = 0;
-  }else{
-     pointerTop = jsav.pointer("top", jsavArr, {targetIndex:arr_size});
-     pointerIndex = arr_size;
-  }
-  pointerTop.click(pclick);
-  jsav.recorded();
-  jsav.forward();
-  // Bind the clickHandler to handle click events on the array
-  jsavArr.click(clickHandler);
-  arrMax.click(maxClickHandler);
-  userInput = false;
-};
-
-// Initialise the exercise
-var initJSAV = function (max_size, arr_size, insertValue) {
-  var i, j;
-  userInput = false;
-  selected_index = -1;
-  insertEnable = false;
-  status = 0;
-  inValue = insertValue;  
-  answerArr.length = 0; // Out with the old
-
-  // Give random numbers in range 0..999
-  for (i = 0; i < arr_size; i++) {
-    answerArr[i] = Math.floor(Math.random() * 1000);
-  }
-  for(i = 0; i < max_size - arr_size; i++)
-  {
-    answerArr.push.apply(answerArr, [""]);
-  }
-  // Now make a copy
-  cloneArr = answerArr.slice(0);
-
-  f_reset(max_size, arr_size);
-
-  // correct answer
-  answerArr.splice(arr_size, 0, inValue); 
-  answerArr.splice(arr_size + 1, 1); 
-
-  // Set up handler for insert button
-  $("#insert").click(function () {
-    if(selected_index !== -1){
-      jsavArr.value(selected_index, inValue);
-	  jsavArr.css(selected_index, { "background-color": "#ddd" });
-	  jsavArr.css(selected_index, {"font-size": "100%"});
-	  jsavArr.unhighlight(selected_index);
-	  selected_index = -1;
-	  status = 0;
-	  userInput = true;
+  // pointer click handler
+  var pclick = function(pointer){
+    if(status == 1){
+      jsavArr.css(selected_index, {"font-size": "100%"});
+      jsavArr.unhighlight(selected_index);
+      selected_pointer = pointer;
+      selected_pointer.element.toggleClass('highlight');
+      status = 2;
+    }else if(status == 2){
+      selected_pointer.element.removeClass('highlight');
+      status = 0;
+    }else{
+      selected_pointer = pointer;
+      selected_pointer.element.toggleClass('highlight');
+      status = 2;
     }
-  });
-
-  // Set up handler for reset button
-  $("#reset").click(function () { f_reset(max_size, arr_size); });
-};
-
-// Check user's answer for correctness: User's array must match answer
-var checkAnswer = function (max_size, arr_size) {
-
-  if(max_size === arr_size || max_size === arr_size + 1){  
-    if(pointerTop.target() !== arrMax || pointerIndex !== 0){
-      alert(pointerIndex);
-      return false;
-	}
-  }else {
-    if(pointerTop.target() !== jsavArr || pointerIndex !== arr_size + 1){
-      return false;
-	}
+    userInput = true;
   }
-    var i;
-  for (i = 0; i < max_size; i++) {
-    if (jsavArr.value(i) !== answerArr[i]) {
-      return false;
+
+  // Helper function for seting pointer
+  function setPointer(name, target, index){
+    var pointerLeft = {visible: true,
+      targetIndex : index,
+      anchor: "left top",
+      myAnchor: "right bottom",
+      left: 15,
+      top: -20};
+    if(pointerTop){
+      pointerTop.element.remove();
+      pointerTop.arrow.element.remove();
     }
+    var newpointer = jsav.pointer(name, target, pointerLeft);
+    newpointer.click(pclick);
+    return newpointer;
   }
-  return true;
-};
+
+  // Click event handler on the array 'jsavArr'
+  var clickHandler = function (index, e) {
+    if (status == 0) { // if nothing currently selected
+      jsavArr.css(index, {"font-size": "110%"});
+      selected_index = index;
+      jsavArr.highlight(index);
+      status = 1;
+    } else if(status == 1) {
+      if(selected_index !== index){
+        jsavArr.swap(selected_index, index);
+      }
+      jsavArr.css(index, {"font-size": "100%"});
+      jsavArr.unhighlight(index);
+      selected_index = -1;  // Reset to nothing selected
+      status = 0;
+    } else if (status == 2){
+      pointerTop = setPointer("top", jsavArr, index);
+      //selected_pointer.target(jsavArr, {relativeIndex : index,targetIndex : index});
+      arrMax.value(0, index);
+      jsav.container.trigger("jsav-updaterelative");
+      selected_pointer.element.removeClass('highlight');
+      pointerIndex = index;
+      status = 0;
+    }
+    userInput = true;
+  };
+
+  // Click event handler on the array 'arrMax'
+  var maxClickHandler = function (index, e) {
+    if (status == 2){
+      pointerTop = setPointer("top", arrMax, 0);
+      arrMax.value(0, maxSize);
+      jsav.container.trigger("jsav-updaterelative");
+      selected_pointer.element.removeClass('highlight');
+      pointerIndex = 0;
+      status = 0;
+    }
+    userInput = true;
+  }
+
+  // reset function definition
+  var f_reset = function (max_size, arr_size) {
+    var leftMargin = 20, topMargin = 50;
+    selected_index = -1;
+    status = 0; 
+
+    if($("#jsav")){
+      $("#jsav").empty();
+    }
+    jsav = new JSAV("jsav");
+    // Sets the speed of animation.
+    jsav.SPEED = 120;
+    jsavArr = jsav.ds.array(cloneArr, {indexed: true, center: false, left: leftMargin, top : topMargin});
+    arrMax = jsav.ds.array([""], {left:jsavArr.element.outerWidth() + 20, top : 50});
+    if(arr_size === max_size){
+      pointerTop = setPointer("top", arrMax, 0);
+      //pointerTop = jsav.pointer("top", arrMax, {targetIndex:0});
+      arrMax.value(0, max_size);
+      pointerIndex = 0;
+    }else{
+      pointerTop = setPointer("top", jsavArr, arr_size);
+      //pointerTop = jsav.pointer("top", jsavArr, {targetIndex:arr_size});
+      arrMax.value(0, arr_size);
+      pointerIndex = arr_size;
+    }
+    //pointerTop.click(pclick);
+    jsav.recorded();
+    jsav.forward();
+    // Bind the clickHandler to handle click events on the array
+    jsavArr.click(clickHandler);
+    arrMax.click(maxClickHandler);
+    userInput = false;
+  };
+
+  // Initialise the exercise
+  var initJSAV = function (max_size, arr_size, insertValue) {
+    var i, j;
+    userInput = false;
+    maxSize = max_size;
+    selected_index = -1;
+    insertEnable = false;
+    status = 0;
+    inValue = insertValue;  
+    answerArr.length = 0; // Out with the old
+
+    // Give random numbers in range 0..999
+    for (i = 0; i < arr_size; i++) {
+      answerArr[i] = Math.floor(Math.random() * 1000);
+    }
+    for(i = 0; i < max_size - arr_size; i++){
+      answerArr.push.apply(answerArr, [""]);
+    }
+    // Now make a copy
+    cloneArr = answerArr.slice(0);
+
+    f_reset(max_size, arr_size);
+
+    // correct answer
+    answerArr.splice(arr_size, 0, inValue); 
+    answerArr.splice(arr_size + 1, 1); 
+
+    // Set up handler for insert button
+    $("#insert").click(function () {
+      if(selected_index !== -1){
+        jsavArr.value(selected_index, inValue);
+        jsavArr.css(selected_index, { "background-color": "#ddd" });
+        jsavArr.css(selected_index, {"font-size": "100%"});
+        jsavArr.unhighlight(selected_index);
+        selected_index = -1;
+        status = 0;
+        userInput = true;
+      }
+    });
+
+    // Set up handler for reset button
+    $("#reset").click(function () { f_reset(max_size, arr_size); });
+  };
+
+  // Check user's answer for correctness: User's array must match answer
+  var checkAnswer = function (max_size, arr_size) {
+
+    if(max_size === arr_size || max_size === arr_size + 1){  
+      if(pointerTop.target() !== arrMax || pointerIndex !== 0){
+        return false;
+      }
+    }else {
+      if(pointerTop.target() !== jsavArr || pointerIndex !== arr_size + 1){
+        return false;
+      }
+    }
+    for (var i = 0; i < max_size; i++) {
+      if (jsavArr.value(i) !== answerArr[i]) {
+        return false;
+      }
+    }
+    return true;
+  };
 </script>
 
 <div class="exercise">
@@ -225,9 +261,12 @@ var checkAnswer = function (max_size, arr_size) {
 
   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem">
+      <p class="problem">Your task in this exercise is to show the
+        behavior for array-based Stacks push.
+        In the array displayed below, the "top" position is <b><var>arr_size </var></b>. </p>
       <div class="question">
-        
+        <p>Push <b><var>insert_value</var></b> into the stack.</p>
+        <p>Click on a value of the array to highlight it, then click on the "Insert" button to insert <b><var>insert_value</var></b> to the highlighted element. To move the 'top' label, you should click the label to highlight it, then click the element of the array you want to move to.</p>
         <input id="reset" type="button" value="Reset" />
 		<input id="insert" type="button" value="Insert" />
         <div id="jsav"></div>
@@ -244,6 +283,9 @@ var checkAnswer = function (max_size, arr_size) {
         </div>
       </div>
       <div class="hints">
+        <p>If the index of 'top' is greater than or equal to array size, then the default status is a correct answer.</p>
+        <p>Otherwise, the first step could be inserting a value into 'top' position of the stack.</p>
+        <p>Increase the 'top' index by 1.</p>
       </div>
     </div>
   </div>
