--- a/AV/Development/rotation-proficiency.html
+++ b/AV/Development/rotation-proficiency.html
@@ -24,6 +24,7 @@
           }
           .jsavtreenode.emptynode {
             border: 1px dashed #777;
+            color: #777;
           }
           p.jsavoutput.jsavline {
             height: 40px;
@@ -143,7 +144,7 @@
             }
             //create empty sub tree
             subtree = av.ds.bintree({center: false, visible: true, nodegap: 5});
-            subtree.element.css({position: "absolute", left: 0, top: 0});
+            subtree.element.css({position: "absolute", top: 0});
             subtree.root("").addClass("emptynode");
             subtree.click(clickHandler);
             subtree.layout();
@@ -160,10 +161,116 @@
         }
         
         function modelSolution(jsav) {
-            var modelTree = jsav.ds.bintree({center: true, visible: true, nodegap: 5});
+            var modelTree = jsav.ds.bintree({center: false, visible: true, nodegap: 5});
+            // modelTree.origlayout = modelTree.layout;
+            // modelTree.layout = function () {
+            //     var o = this.origlayout();
+            //     this.element.stop(true, true);
+            //     var left;
+            //     if (modelSubtree && !modelSubtree.root().hasClass("emptynode")) {
+            //         //position to the right
+            //         left = jsav.canvas.width() - o.width;
+            //     } else {
+            //         //center tree
+            //         left = jsav.canvas.width() / 2 - o.width / 2;
+            //     }
+            //     this.element.animate({left: left});
+            //     return $.extend({}, o, {left: left});
+            // };
+            //insert nodes
+            modelTree.insert(initialArray);
+            addEmptyNodes(modelTree.root());
+            modelTree.layout();
+            modelTree.element.css({position: "absolute", top: 0, left: jsav.canvas.width() / 2 - modelTree.element.width() / 2});
 
             var modelSubtree = jsav.ds.bintree({center: false, visible: true, nodegap: 5});
+            modelSubtree.element.css({position: "absolute", left: 0, top: 0});
+            modelSubtree.root("").addClass("emptynode");
+            modelSubtree.layout();
+            modelSubtree.hide();
 
+            jsav.canvas.css({height: 350});
+            jsav._undo = [];
+
+            //find and highlight unbalanced node
+            var node = getUnbalancedNode(
+                modelTree.root(),
+                initialArray[initialArray.length - 1]
+                );
+            node.highlight();
+            jsav.step();
+
+            //move the unbalanced subtree into modelSubtree
+            turnAnimationOff();
+            copySubtree(node, modelSubtree.root());
+            modelSubtree.show();
+            node = removeSubtree(node, true);
+            modelTree.css({left: jsav.canvas.width() - modelTree.layout().width});
+            restoreAnimationState();
+            modelSubtree.layout();
+            jsav.stepOption("grade", true);
+            jsav.step();
+
+            //move the taller subtree of the root of the modelSubtree back to the modelTree
+            var moveNode;
+            if (height(modelSubtree.root().left()) > height(modelSubtree.root().right())) {
+                moveNode = modelSubtree.root().left();
+            } else {
+                moveNode = modelSubtree.root().right();
+            }
+            moveNode.highlight();
+            jsav.step();
+
+            turnAnimationOff();
+            copySubtree(moveNode, node);
+            removeSubtree(moveNode);
+            restoreAnimationState();
+            modelTree.css({left: jsav.canvas.width() - modelTree.layout().width});
+            modelSubtree.layout();
+            jsav.stepOption("grade", true);
+            jsav.step();
+
+            //move lower subtree of node under root of modelSubtree if it exists
+            if (height(node.left()) < height(node.right())) {
+                moveNode = node.left();
+            } else {
+                moveNode = node.right();
+            }
+            if (!moveNode.hasClass("emptynode")) {
+                moveNode.highlight();
+                jsav.step();
+
+                turnAnimationOff();
+                if (moveNode.value() <= modelSubtree.root().value()) {
+                    copySubtree(moveNode, modelSubtree.root().left());
+                } else {
+                    copySubtree(moveNode, modelSubtree.root().right());
+                }
+                removeSubtree(moveNode);
+                restoreAnimationState();
+                modelTree.css({left: jsav.canvas.width() - modelTree.layout().width});
+                modelSubtree.layout();
+                jsav.stepOption("grade", true);
+                jsav.step();
+            }
+
+            //finally move modelSubtree to the empty child of node
+            modelSubtree.root().highlight();
+            jsav.step();
+            if (height(node.left()) < height(node.right())) {
+                moveNode = node.left();
+            } else {
+                moveNode = node.right();
+            }
+            turnAnimationOff();
+            copySubtree(modelSubtree.root(), moveNode);
+            removeSubtree(modelSubtree.root());
+            modelSubtree.hide();
+            restoreAnimationState();
+            modelTree.css({left: jsav.canvas.width() / 2 - modelTree.layout().width / 2});
+            modelSubtree.layout();
+            jsav.stepOption("grade", true);
+            jsav.step();
 
             return modelTree;
         }
@@ -182,7 +289,7 @@
                 // subtree.element.find("div[style*='display: none']").remove();
                 subtree.layout();
                 //remove original subtree and replace with an empty node
-                removeSubtree.call(this);
+                removeSubtree(this, true);
                 restoreAnimationState();
                 jsavTree.layout();
                 //animate separation
@@ -197,7 +304,7 @@
                 selectedNode = this;
                 this.addClass("selected");
                 nodeSelected.value(1);
-            } else if (selectedNode === this) {
+            } else if (nodeSelected.value() && selectedNode === this) {
                 //deselect
                 selectedNode = null;
                 this.removeClass("selected");
@@ -219,7 +326,7 @@
                 //move selected nodes subtree to this
                 copySubtree(selectedNode, tempTree.root(""));
                 //remove original subtree and replace with an empty node
-                removeSubtree.call(selectedNode);
+                removeSubtree(selectedNode);
                 //reset layouts
                 tempTree.layout();
                 restoreAnimationState();
@@ -287,22 +394,29 @@
 
         //removes the subtree with the calling node as its root
         //replaces the calling node with an empty node
-        function removeSubtree() {
-            if (this.parent() && this.parent().left() === this) {
-                this.parent().left("").addClass("emptynode");
-                this.remove();
-            } else if (this.parent()) {
-                this.parent().right("").addClass("emptynode");
-                this.remove();
-            } else {
-                if (this.left())
-                    this.left().remove();
-                if (this.right())
-                    this.right().remove();
-                this.value("");
-                this.removeClass("selected");
-                this.addClass("emptynode");
+        function removeSubtree(root, keep) {
+            var val = "";
+            var node;
+            if (keep) {
+                val = root.value();
             }
+            if (root.parent() && root.parent().left() === root) {
+                node = root.parent().left(val).addClass("emptynode");
+                root.remove();
+            } else if (root.parent()) {
+                node = root.parent().right(val).addClass("emptynode");
+                root.remove();
+            } else {
+                if (root.left())
+                    root.left().remove();
+                if (root.right())
+                    root.right().remove();
+                root.value(val);
+                root.removeClass("selected");
+                root.addClass("emptynode");
+                node = root;
+            }
+            return node;
         }
 
         //returns true if child is a child, grandchild, grandgrandchild... of parent
@@ -341,7 +455,8 @@
                         bt.clear();
                         break;
                     }
-                    if (isUnbalanced(bt.root(), arr[i]) === "single") {
+                    var node = getUnbalancedNode(bt.root(), arr[i]);
+                    if (node && getRotationType(node) === "single") {
                         if (i >= options.minNodes) {
                             bt.clear();
                             return arr;
@@ -350,7 +465,7 @@
                             balanceTree(bt, arr[i]);
                             treeToArray(bt.root(), arr);
                         }
-                    } else if (isUnbalanced(bt.root(), arr[i]) === "double") {
+                    } else if (node && getRotationType(node) === "double") {
                         //wrong kind of rotation needed -> balance tree
                         balanceTree(bt, arr[i]);
                         treeToArray(bt.root(), arr);
@@ -364,10 +479,8 @@
 
         }
 
-        //checks if the tree is unbalanced after last insertion
-        //if single rotation is required to restore the tree the function will return single
-        //similarly it returns double if double rotation is needed
-        function isUnbalanced(root, last) {
+        //returns an unbalanced node if one exists
+        function getUnbalancedNode(root, last) {
             var node = root;
             //find the last inserted node
             while (node.left() || node.right()) {
@@ -380,18 +493,22 @@
             //Check if tree is unbalanced
             while (node) {
                 if (Math.abs(height(node.left()) - height(node.right())) >= 2) {
-                    if ((height(node.left()) > height(node.right()) &&
-                        height(node.left().left()) > height(node.left().right())) ||
-                        (height(node.right()) > height(node.left()) &&
-                        height(node.right().right()) > height(node.right().left()))) {
-                        return "single";
-                    } else {
-                        return "double";
-                    }
+                    return node;
                 }
                 node = node.parent();
             }
-            return false;
+            return undefined;
+        }
+
+        function getRotationType(node) {
+            if ((height(node.left()) > height(node.right()) &&
+                height(node.left().left()) > height(node.left().right())) ||
+                (height(node.right()) > height(node.left()) &&
+                height(node.right().right()) > height(node.right().left()))) {
+                return "single";
+            } else {
+                return "double";
+            }
         }
 
         //returns the height of the node and 0 if node is undefined/null
